--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
     "description": "Simple Scratchcard Game",
     "main": "dist/index.js",
     "scripts": {
-        "start": "webpack-dev-server -d --inline --hot --progress --no-info --port 9000",
+        "dev": "webpack-dev-server -d --inline --hot --progress --no-info --port 9000",
         "build": "webpack -p"
     },
     "author": "Maicon Feldhaus (maicon.feldhaus@gmail.com)",
     "license": "MIT",
     "devDependencies": {
         "pixi.js": "^4.5.6",
+        "pixi-particles": "^2.1.7",
         "gsap": "^1.20.3",
         "typescript": "^2.5.3",
         "ts-loader": "^2.3.7",
@@ -18,5 +19,9 @@
         "webpack-dev-server": "^2.9.1",
         "html-webpack-plugin": "^2.30.1",
         "copy-webpack-plugin": "^4.1.1"
+    },
+    "dependencies": {
+        "pixi.js": "^4.5.6",
+        "gsap": "^1.20.3"
     }
 }
