--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "pixi-particles": "^2.1.7",
         "gsap": "^1.20.3",
         "typescript": "^2.5.3",
+        "tslint": "^5.7.0",
         "ts-loader": "^2.3.7",
         "webpack": "^3.6.0",
         "webpack-dev-server": "^2.9.1",
